# ChangeLog for net-misc/ttytter
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  23 Mar 2010; Anna Gabutero <amdg@lavabit.com> ttytter-1.0.00.ebuild:
  Changes based on feedback from #gentoo-sunrise

*ttytter-1.0.00 (22 Feb 2010)

  22 Feb 2010; Anna Gabutero <amdg@lavabit.com> ttytter-0.9.9.ebuild,
  +ttytter-1.0.00.ebuild:
  Version bump to 1.0.00

  24 Nov 2009; <anna@gentoo.org> ttytter-0.9.7.ebuild, ttytter-0.9.9.ebuild,
  +metadata.xml:
  Making repoman happy

  24 Nov 2009; Anna Gabutero <amdg@lavabit.com> ttytter-0.9.9.ebuild:
  Fixing broken dependency specification

*ttytter-0.9.7 (08 Sep 2009)

  08 Sep 2009; Anna Gabutero <amdg@lavabit.com> +ttytter-0.9.7.ebuild:
  Initial commit