@@ -1,8 +1,6 @@
-DIST 097.txt 91745 RMD160 99c92d84297fcbd4d9ef80d12da14fcf00746723 SHA1 65200fc8c428027193509990ab2c395b494defa7 SHA256 d8e9786e795e5fa3ec752ef8091c91c5aa28a64543061022ca8d1c1aa28f3e60
-DIST 099.txt 92806 RMD160 708c6452e3df4d4bb4f7a157f8bdf128857b8715 SHA1 f0115e6fcf739bc01ff5e4ede9eb0f23aa51b910 SHA256 6d33f869252aeed3e8aee8c5ea7e9880376e37c33a76c8b03af22114966cf635
 DIST 1.0.00.txt 113667 RMD160 d1ff509de05b2c386461d88f5899d476732c0ba0 SHA1 044437abc177ba8c5c5efd0956697f1562504d00 SHA256 09048540f59dc5357e0427cab88ec048b0a4f63643791eda70d01461de03609a
-EBUILD ttytter-0.9.7.ebuild 664 RMD160 0c00455309e1dfea6d45e7440eb280539ad1c525 SHA1 21e298a25acedfe44ae97a5c3d2c0d7c3c20e2e3 SHA256 5fa8901075e5e407b29a33f1ae2c4563d676a1c7f7427b6fb367e34de2951687
-EBUILD ttytter-0.9.9.ebuild 665 RMD160 a8efce9bf0bb107ff6ace2ed64abd019e30f8c71 SHA1 767104ebf93e650b71c781b10458fd57a6256790 SHA256 4fef9a6adc54e9614cee041d8f7a54e24a049932c08d551b44976b619aacd278
+DIST 1.0.03.txt 115443 RMD160 53eeb559b9cddb9bc07c6004c4da453052b8421e SHA1 29d412b05b23ab80fcb8c7bab620cc3bbe1ce001 SHA256 d41baba8b6afffa9791064b981fdf13bcf26c19befc67c8e93123ecb28b9146e
 EBUILD ttytter-1.0.00.ebuild 595 RMD160 3f23116479f0efa25ba46d13b5b71a01d2a66ccd SHA1 b66f05498ceb7412463eacec42ccaabb9e9e6e15 SHA256 f57a8e846f3571ab72ca863853f75ff4aaa29e11ad25466f2d5e42dccdf41c22
-MISC ChangeLog 739 RMD160 c84dcf8fe4ad7a99c019eca84b73e9629e5c450f SHA1 d378ffcdcd500572c4daa64448545309c14db0a7 SHA256 4d62685f8a1257a846164320ce6f7792e778a53fcf400d03d53b845d16f2390f
+EBUILD ttytter-1.0.03.ebuild 595 RMD160 3f23116479f0efa25ba46d13b5b71a01d2a66ccd SHA1 b66f05498ceb7412463eacec42ccaabb9e9e6e15 SHA256 f57a8e846f3571ab72ca863853f75ff4aaa29e11ad25466f2d5e42dccdf41c22
+MISC ChangeLog 941 RMD160 f5930c127a537383e941f947c26ed2904b0c4b3a SHA1 fdda947155a57bd37e976e04a861ab094e9e2705 SHA256 f49fbe8cb044a5159510964ac6ef559832c039c11f53cfbe34a5c4f85911ea8a
 MISC metadata.xml 322 RMD160 84b785c57263d8906be10da9148538d172f0313b SHA1 d835241227d89a077aefaf57389c81c7f6755c19 SHA256 27473aa7a75d0af3b3de917dab1e419bec29999aae278ad061e176526a67f005
