@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*ttytter-1.0.03 (15 May 2010)
+
+  15 May 2010; Anna Gabutero <amdg@lavabit.com> -ttytter-0.9.7.ebuild,
+  -ttytter-0.9.9.ebuild, +ttytter-1.0.03.ebuild:
+  Bump version to 1.0.3 and clean up old versions
+
   23 Mar 2010; Anna Gabutero <amdg@lavabit.com> ttytter-1.0.00.ebuild:
   Changes based on feedback from #gentoo-sunrise
 
